kubernetes-basics/javaapp-all-in-one-clusterip-access.yml
apiVersion: v1
kind: Service
metadata:
  name: covid-19-bangladesh-clusterip-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: covid-19-bangladesh
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-19-bangladesh-clusterip-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid-19-bangladesh
  template:
    metadata:
      labels:
        app: covid-19-bangladesh
    spec:
      containers:
        - name: covid-19-bangladesh
          image: mmahmood/covid-19-bangladesh:latest
          ports:
            - containerPort: 8080
---
