kubernetes-basics/javaapp-all-in-one-nodeport-access.yml
apiVersion: v1
kind: Service
metadata:
  name: covid-19-bangladesh-nodeport-service
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30001
  selector:
    app: covid-19-bangladesh

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-19-bangladesh-nodeport-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid-19-bangladesh
  template:
    metadata:
      labels:
        app: covid-19-bangladesh
    spec:
      containers:
        - name: covid-19-bangladesh
          image: mmahmood/covid-19-bangladesh:latest
          ports:
            - containerPort: 8080
---
