kubernetes-basics/javaapp-all-in-one.yml
apiVersion: v1
kind: Service
metadata:
  name: covid-19-bangladesh-service
spec:
  type: NodePort
  selector:
    app: covid-19-bangladesh
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-19-bangladesh-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid-19-bangladesh
  template:
    metadata:
      labels:
        app: covid-19-bangladesh
    spec:
      containers:
        - name: covid-19-bangladesh
          image: mmahmood/covid-19-bangladesh:latest
          ports:
            - containerPort: 8080
---
